<resources>
    <string name="app_name" translatable="false">Emo Diana</string>

    <string name="hello_world">Hello world!</string>
    <string name="start">Empezar</string>
    <string name="b_next">Siguiente</string>
    <string name="select_emotion">Escoge una emoción</string>
    <string name="b_back">Atrás</string>
    <string name="select_level">Selecciona el nivel de intensidad</string>
    <string name="record_audio">Escribe el por qué</string>
    <string name="send_data">Enviar datos</string>
    <string name="dialog_message">¿Estás seguro?</string>
    <string name="cancel">Cancelar</string>
    <string name="save_data">Guardar datos</string>
    <string name="delete_data">Borrar datos</string>
    <string name="title_activity_user_tab">ji</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">Nombre: </string>
    <string name="user_age">Edad: </string>
    <string name="user_gender">Selecciona una:</string>
    <string name="user_girl">Chica</string>
    <string name="user_boy">Chico</string>
</resources>
