<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="ull.emo_diana.Save_tab"
    android:background="@color/med_blue"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/green_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#0099cc"
            android:contentDescription="@string/hello_world"
            android:src="@drawable/button_1green"
            android:adjustViewBounds="true"
            android:layout_marginRight="5dp"
            android:clickable="true"
            android:onClick="clickHeaderButton" />

        <ImageButton
            android:id="@+id/yellow_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#0099cc"
            android:contentDescription="@string/hello_world"
            android:src="@drawable/button_2yellow"
            android:layout_marginRight="5dp"
            android:adjustViewBounds="true"
            android:longClickable="true"
            android:clickable="true"
            android:onClick="clickHeaderButton" />

        <ImageButton
            android:id="@+id/orange_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#0099cc"
            android:contentDescription="@string/hello_world"
            android:src="@drawable/button_3orange"
            android:layout_marginRight="5dp"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:onClick="clickHeaderButton" />

        <ImageButton
            android:id="@+id/red_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="#0099cc"
            android:contentDescription="@string/hello_world"
            android:src="@drawable/button_4red"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:onClick="clickHeaderButton" />

        <ImageButton
            android:id="@+id/pink_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#0099cc"
            android:contentDescription="@string/hello_world"
            android:src="@drawable/button_5pink"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:onClick="clickHeaderButton" />

    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="1">

        <Space
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

        <ImageView
            android:contentDescription="@string/hello_world"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:src="@drawable/yellow_star"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_data"
            android:id="@+id/next_button"
            android:background="@color/dark_blue"
            android:textColor="@color/white"
            android:clickable="true"
            android:layout_marginLeft="5dp"
            android:onClick="saveButton"
            android:layout_gravity="center" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/back_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/b_back"
            android:textColor="@color/white"
            android:background="@color/dark_blue"
            android:clickable="true"
            android:layout_marginRight="5dp"
            android:onClick="clickControlButton" />

    </LinearLayout>


</LinearLayout>
